devops/installers/minio/ingress-manifests/tenant/ingress-tenant.yaml
#######################################################################################
# Copyright ETSI Contributors and Others.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
# implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#######################################################################################

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-tenant-ingress
  namespace: ${MINIO_TENANT_NAME}
  annotations:
    ## Comment if using a CA signed certificate
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: ${MINIO_INGRESS_CLASSNAME}
  tls:
  - hosts:
      - ${MINIO_INGRESS_TENANT_HOST}
    secretName: nginx-tls
  rules:
  - host: ${MINIO_INGRESS_TENANT_HOST}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: ${MINIO_TENANT_HTTPS_PORT}
